--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
     flex-wrap: wrap;
 }
 .music-player{
-    background: #ffe0e5;
+    background: #aee19f;
     width: 400px;
     padding: 25px 35px;
     text-align: center;
@@ -31,7 +31,7 @@ nav .circle{
     height: 40px;
     line-height: 40px;
     background: #fff;
-    color: #f53192;
+    color: #0b0b0b;
     box-shadow: 0 5px 10px rgba(255, 26, 26, 0.22);
 }
 .song-img{
@@ -43,25 +43,25 @@ nav .circle{
 .music-player h1{
     font-size: 20px;
     font-weight: 400;
-    color: #333;
+    color: #000000;
     margin-top: 20px;
 }
 .music-player p{
     font-size: 14px;
-    color: #333;
+    color: #000000;
 }
 #progress{
     -webkit-appearance: none;
     width: 100%;
     height: 6px;
-    background: #f53192;
+    background: #000000;
     border-radius: 4px;
     cursor: pointer;
     margin: 40px 0;
 }
 #progress::-webkit-slider-thumb{
     -webkit-appearance: none;
-    background: #f53192;
+    background: #000000;
     width: 30px;
     height: 30px;
     border-radius: 50%;
@@ -82,12 +82,20 @@ nav .circle{
     align-items: center;
     justify-content: center;
     border-radius: 50%;
-    color: #f53192;
+    color: #000000;
     box-shadow: 0 10px 20px rgba(255, 26, 26, 0.22);
     cursor: pointer;
 }
 .controls div:nth-child(2){
     transform: scale(1.5);
-    background: #f53192;
+    background: #000000;
     color: #fff;
+}
+
+/*------CSS FOR SMARTPHONES------*/
+@media only screen and (max-width: 600px){
+    #header{
+        background-image: url(media/1-thumbnail.png);
+    }
+
 }
